tests/errors/sem.expected-ptr.subscript-fn-retrun.or
main :: () -> void {
    @subscript foo :: (a: &sint, index: sint) -> sint {
        return 0;
    };
    foo;
};
